[package]
name = "mp4"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
name = "mp4"
path = "src/lib.rs"

[[bin]]
name = "mp4"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
# Binaries.
anyhow = "1.0.25"
bytes = "1.0"
clap = "2.33"
env_logger = "0.7.1"
headers = "0.3"
http = "0.2"
hyper = "0.14"
structopt = "0.3.14"
tokio = { version = "1.0", features = [ "full" ] }
warp = "0.3"

# Lib.
auto_impl = "0.3.0"
byteorder = "1.3.2"
byte_struct = "0.6.0"
byte_struct_derive = "0.4.2"
chrono = "0.4.10"
log = "0.4"
lru = "0.6.5"
memmap = "0.7"
once_cell = "1.5.2"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"
