[package]
name = "mp4cli"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[[bin]]
name = "mp4"
path = "src/main.rs"

[dependencies]
mp4lib = { version = "0.1", path = "../mp4lib" }

anyhow = "1.0.25"
clap = "2.33"
env_logger = "0.7.1"
structopt = "0.3.14"
serde_json = "1.0"
