[package]
name = "mp4lib"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
name = "mp4lib"
path = "src/lib.rs"

[dependencies]
auto_impl = "0.3.0"
byteorder = "1.3.2"
byte_struct = "0.6.0"
byte_struct_derive = "0.4.2"
chrono = "0.4.10"
h264-reader = "0.4.0"
isolang = "1.0"
log = "0.4"
lru = "0.6.5"
memmap = "0.7"
once_cell = "1.5.2"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"
