[package]
name = "mp4lib"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "mp4lib"
path = "src/lib.rs"

[features]
default = [ "http-handler", "streaming" ]
http-handler = [
    "streaming", "bytes", "futures-core", "headers",
    "http", "http-body", "regex", "tokio"
]
streaming = [ "mime_guess", "once_cell", "percent-encoding", "scan_fmt" ]
axum-box-body = [ "axum" ]

[dependencies]
auto_impl = "0.3.0"
chrono = "0.4.10"
isolang = "1.0"
libc = "0.2.87"
log = "0.4"
lru = "0.6.5"
memmap = "0.7"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"

# streaming
ambassador = { version = "0.2.1", optional = true }
mime_guess = { version = "2.0.3", optional = true }
once_cell = { version = "1.5.2", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
scan_fmt = { version = "0.2", features = [ ], optional = true }

# http-file-server
bytes = { version = "1.1.0", optional = true }
futures-core = { version = "0.3.19", optional = true }
headers = { version = "0.3.4", optional = true }
http = { version = "0.2.6", optional = true }
http-body = { version = "0.4.4", optional = true }
regex = { version = "1.5.4", optional = true }
tokio = { version = "1.16", features = [ "rt", "rt-multi-thread" ], optional = true }

# axum-box-body
axum = { version = "0.5.4", optional = true }
