[package]
name = "mp4server"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mp4server"
path = "src/main.rs"

[dependencies]
mp4lib = { version = "0.1", path = "../mp4lib" }

anyhow = "1.0.25"
bytes = "1.0"
clap = "2.33"
env_logger = "0.7.1"
headers = "0.3"
http = "0.2"
hyper = "0.14"
mime_guess = "2.0.3"
once_cell = "1.5.2"
percent-encoding = "2.1.0"
regex = "1.0"
serde_json = "1.0"
structopt = "0.3.14"
scan_fmt = { version = "0.2", features = [] }
tokio = { version = "1.0", features = [ "full" ] }
warp = "0.3"
