[package]
name = "mp4server"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mp4server"
path = "src/main.rs"

[dependencies]
mp4lib = { version = "0.1", features = [ "axum-box-body"], path = "../mp4lib" }

anyhow = "1.0.25"
axum = "0.5.4"
bytes = "1.0"
clap = "2.33"
env_logger = "0.7.1"
headers = "0.3"
http = "0.2"
http-body = "0.4.4"
once_cell = "1.8.0"
regex = "1.0"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"
structopt = "0.3.14"
time = { version = "0.3.7", features = [ "local-offset" ] }
tokio = { version = "1.0", features = [ "full" ] }
tower = { version = "0.4.12", features = [ "filter" ] }
tower-http = { version = "0.3.2", features = [ "trace", "cors", "compression-gzip", "compression-deflate" ] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
